Architecture of the program and init Spring Security

--- a/backendSCM/src/main/resources/application.properties
+++ b/backendSCM/src/main/resources/application.properties
@@ -1,7 +1,32 @@
+# Nazwa aplikacji
 spring.application.name=backendSCM
+
+# Wlaczenie konsoli H2
 spring.h2.console.enabled=true
+
+# Konfiguracja zrodla danych dla bazy H2
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=login
+spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+DATABASE_TO_UPPER=false
+IGNORE_CASE=true
+
+# Konfiguracja zabezpieczen
+# Dozwolone sciezki, ktore nie wymagaja uwierzytelnienia
+security.allowed-paths=/api/auth/login/**,/api/auth/register/**
+
+# Sekret uzywany do generowania tokenów JWT
+app.jwtSecret=mySecretKey
+
+# Czas wygasniecia tokenu JWT w milisekundach (1 godzina)
+app.jwtExpirationMs=3600000
+
+#Konfiguracja Hibernate'a aby automatycznie dodawal cudzyslowy do identyfikatorow (nazw tabel, nazw kolumn)
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+#Zmiana portu
+server.port=8090
