--- a/backendSCM/src/main/resources/application.properties
+++ b/backendSCM/src/main/resources/application.properties
@@ -5,7 +5,9 @@ spring.application.name=backendSCM
 spring.h2.console.enabled=true
 
 # Konfiguracja zrodla danych dla bazy H2
-spring.datasource.url=jdbc:h2:mem:testdb
+#jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+spring.jpa.defer-datasource-initialization=true
+spring.datasource.url=jdbc:h2:mem:testdb;DATABASE_TO_UPPER=false
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
